# upsylon

./: Doxyfile  README.md  comb1.c
src/: CMakeLists.txt
src/alchemy/: CMakeLists.txt
src/alchemy/docs/: alchemy.tex  makefile
src/alchemy/tests/: CMakeLists.txt  main.cpp  sample.lua  test-actor.cpp  test-actors.cpp  test-balance.cpp  test-eqdb.cpp  test-equilibria.cpp  test-equilibrium.cpp  test-freezable.cpp  test-library.cpp  test-lua.cpp  test-parser.cpp  test-reactor.cpp  test-species.cpp  test-types.cpp
src/aqua/: CMakeLists.txt
src/aqua/docs/: acid2.jl  aqua.tex  makefile  sample.jl  sample.wxmx
src/aqua/tests/: CMakeLists.txt  acetic.lua  ammoniac.lua  citric.lua  main.cpp  test-boot.cpp  test-citric.cpp  test-engine.cpp  test-eqs.cpp  test-library.cpp  test-lua.cpp  test-solver.cpp  test-species.cpp
src/asm/: code.asm  main.cpp  makefile
src/bz2++/: CMakeLists.txt
src/bz2++/tests/: CMakeLists.txt  main.cpp  test-cat.cpp
src/chem/: CMakeLists.txt
src/chem/docs/: chem.tex  fluo.tex  makefile  spectro.tex  spectro.wxmx
src/chem/tests/: CMakeLists.txt  acetic.lua  citric.lua  main.cpp  sample.lua  test-balance.cpp  test-boot.cpp  test-cs.cpp  test-eq.cpp  test-eqs.cpp  test-fluo.cpp  test-kinetics.cpp  test-lib.cpp  test-lua.cpp  test-normalize.cpp  test-rxn.cpp  test-species.cpp
src/chemical/: CMakeLists.txt
src/chemical/tests/: CMakeLists.txt  cycle1.lua  hairy.lua  main.cpp  replica.lua  simple.lua  test-actors.cpp  test-eqs.cpp  test-gl.cpp  test-lib.cpp  test-lua.cpp  test-reactor.cpp  test-solve.cpp  test-sys.cpp  test-torture.cpp  test-types.cpp
src/csv/: CMakeLists.txt
src/csv/tests/: CMakeLists.txt  main.cpp  test-csv.cpp
src/ext/: CMakeLists.txt
src/fltk/: CMakeLists.txt
src/fltk/tests/: CMakeLists.txt  canvas.fl  main.cpp  matte.fl  test-canvas.cpp  test-matte.cpp
src/gfx/: CMakeLists.txt
src/gfx/docs/: grad.tex  makefile
src/gfx/tests/: CMakeLists.txt  main.cpp  named-colors.txt  test-area.cpp  test-bitmap.cpp  test-blend.cpp  test-blobs.cpp  test-blur.cpp  test-broker.cpp  test-colors.cpp  test-detect.cpp  test-draw.cpp  test-eda.cpp  test-edges.cpp  test-engine.cpp  test-enhance.cpp  test-filter.cpp  test-filters.cpp  test-grad.cpp  test-grads.cpp  test-image.cpp  test-intensity.cpp  test-locator.cpp  test-mask.cpp  test-named.cpp  test-ops.cpp  test-options.cpp  test-patch.cpp  test-pixels.cpp  test-pixmap.cpp  test-pixmaps.cpp  test-ramp.cpp  test-sgn.cpp  test-split.cpp  test-stack.cpp  test-stretch.cpp  test-tess.cpp  test-tile.cpp  test-tiles.cpp  test-topo.cpp  (+1 more)
src/graphic/: CMakeLists.txt  y_color_ramp.cpp  y_named_colors.cpp
src/graphic/data/: histogram.tex  makefile
src/graphic/tests/: CMakeLists.txt  main.cpp  test-3x3.cpp  test-area.cpp  test-bitmap.cpp  test-blobs.cpp  test-blur.cpp  test-channels.cpp  test-draw.cpp  test-edges.cpp  test-filter.cpp  test-gradient.cpp  test-grads.cpp  test-image.cpp  test-imgrad.cpp  test-jpeg.cpp  test-memory.cpp  test-parallel.cpp  test-pixmap.cpp  test-png.cpp  test-ramp.cpp  test-stack.cpp  test-tiff.cpp  test-types.cpp
src/grasp/: CMakeLists.txt
src/grasp/tests/: CMakeLists.txt  hello.g  main.cpp  test-dyn.cpp  test-ee.cpp  test-grammar.cpp  test-json.cpp  test-parser.cpp  test-rules.cpp
src/ink/: CMakeLists.txt  named-colors.cpp
src/ink/tests/: CMakeLists.txt  main.cpp  test-areas.cpp  test-bitmap.cpp  test-blob.cpp  test-blur.cpp  test-crop.cpp  test-draw.cpp  test-edges.cpp  test-hist.cpp  test-image.cpp  test-iso.cpp  test-kr.cpp  test-mask.cpp  test-ops.cpp  test-pixmap.cpp  test-pixmaps.cpp  test-sub.cpp
src/jargon/: CMakeLists.txt
src/jargon/tests/: CMakeLists.txt  empty.g  lex.g  main.cpp  sample.g  test-dialect.cpp  test-expr.cpp  test-grammar.cpp  test-jargon-regexp.cpp  test-jargon-scanner.cpp  test-jargon-types.cpp  test-lexer.cpp  test-matching.cpp  test-module.cpp  test-parser.cpp  test-pattern.cpp  test-posix.cpp  test-regexp.cpp  test-scanner.cpp  test-source.cpp  test-types.cpp  test-vfs.cpp  test-xnode.cpp
src/jive/: CMakeLists.txt
src/jive/tests/: CMakeLists.txt  lex.g  main.cpp  sample.g  test-axiom.cpp  test-dialect.cpp  test-editor.cpp  test-endl.cpp  test-grammar.cpp  test-lang-axiom.cpp  test-lang-grammar.cpp  test-lang-parser.cpp  test-lexer.cpp  test-list.cpp  test-parser.cpp  test-perr.cpp  test-scanner.cpp  test-scatter.cpp  test-types.cpp
src/json/: CMakeLists.txt
src/json/tests/: CMakeLists.txt  main.cpp  test-value.cpp
src/lang/: CMakeLists.txt
src/lang/tests/: CMakeLists.txt  NameData.xml  eval.g  expr.g  hello.g  lex.g  list.g  list2.g  main.cpp  sample.g  test-dyn.cpp  test-ee.cpp  test-eval.cpp  test-gen.cpp  test-grammar.cpp  test-h31.cpp  test-hash.cpp  test-json.cpp  test-lex.cpp  test-manager.cpp  test-matching.cpp  test-parser.cpp  test-pattern.cpp  test-posix.cpp  test-regex.cpp  test-rules.cpp  test-scanner.cpp  test-source.cpp  test-token.cpp
src/lang_old/tests/: list.g  main.cpp  sample.g  test-dyn.cpp  test-grammar.cpp  test-hash.cpp
src/lua++/: CMakeLists.txt
src/lua++/tests/: CMakeLists.txt  main.cpp  test-vm.cpp
src/main/: CMakeLists.txt  mprimes.cpp  nwsrt.cpp  rc-demo.cpp  rc1.txt  y_rc.cpp
src/main/cli/: CMakeLists.txt  calcium.cfg  get-kde-wallpapers.cpp  mprimes.cpp  nwsrt.cpp  y-port-missing.cpp  y_bin2dat.cpp  y_grep.cpp  y_hexdump.cpp  y_macho.cpp  y_md.cpp  y_mpi_xcopy.cpp  y_nwsrt.cpp  y_parse_rsa.cpp  y_patch_conviv.cpp  y_port_missing.cpp  y_port_required.cpp  y_rc.cpp  y_rsa_keys.cpp  y_sed.cpp  y_uniq.cpp
src/main/dll/: CMakeLists.txt  engine.cpp  engine.py  test-engine-failure.py  test-engine-io.py  test-engine-numpy.py  (+1 more)
src/math/: CMakeLists.txt
src/mkl/: CMakeLists.txt
src/mpi/: CMakeLists.txt
src/mpi++/: CMakeLists.txt
src/net/: CMakeLists.txt
src/omp/: CMakeLists.txt  makefile  pi-core.c  pi-ng.c  pi-v2.c  pi.c  pi.h  pi_v2.c  y_pi_driver.cpp
src/python/: CMakeLists.txt  call-spam.py  spam.cpp
src/r++/: CMakeLists.txt  vecsum.R
src/seem/: CMakeLists.txt
src/spade/: CMakeLists.txt
src/sqlite++/: CMakeLists.txt
src/z++/: CMakeLists.txt
(+4549 files in other folders)
