PROJECT(y-fltk CXX)

INCLUDE(../../scripts/fltk.cmake)

INCLUDE_DIRECTORIES(. ../main)

IF(FLTK_FOUND)

#simplify CXX_FLAGS

#MESSAGE(STATUS "Before Replacement" )
#MESSAGE( STATUS "fltk.CMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}" )
#MESSAGE( STATUS "fltk.CMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}" )
#MESSAGE( STATUS "fltk.CMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}" )
#MESSAGE( STATUS "fltk.CMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}" )

FOREACH( word IN ITEMS "-Weffc++" "-Wextra" )
	STRING(REPLACE "${word}" "" CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}"   )
	STRING(REPLACE "${word}" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )
ENDFOREACH()

#MESSAGE(STATUS "After Replacement" )
#MESSAGE( STATUS "fltk.CMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}" )
#MESSAGE( STATUS "fltk.CMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}" )
#MESSAGE( STATUS "fltk.CMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}" )
#MESSAGE( STATUS "fltk.CMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}" )

MESSAGE( STATUS "<FLTK>" )
FILE(GLOB main_decl y/fltk/*.hpp)
FILE(GLOB main_code y/fltk/*.cpp)
SET(main_srcs ${main_decl} ${main_code})
SOURCE_GROUP( fltk FILES ${main_srcs} )
INSTALL( FILES ${main_decl} DESTINATION include/y/fltk )


ADD_LIBRARY(y-fltk STATIC ${main_srcs})
INSTALL( TARGETS y-fltk ARCHIVE DESTINATION lib )

ADD_SUBDIRECTORY(tests)
MESSAGE( STATUS "<FLTK/>" )
MESSAGE(STATUS "")
ENDIF()
